# GVPlayer

./: .gitignore  CMakeLists.txt  IMPROVEMENTS.md  LICENSE  PROJECT_SUMMARY.md  README.md
resources/: GVPlayer.icns
scripts/: package_dmg.sh
src/: MainWindow.cpp  MainWindow.h  MpvWidget.cpp  MpvWidget.h  main.cpp
